5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1709_3063.log
== TEST (2019-05-02 11:08:50) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura")
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
elif		
-- ERROR:
File "XXXX", line 9
    elif		
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:08:57) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura")
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
		
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:11:16) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura").lower
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
elif(a == "inteira"):
	print((30 * d) - 20)
elif(a == "malha"):
	print((15*d)-1)
elif(a == "placa"):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:11:44) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
elif(a == "inteira"):
	print((30 * d) - 20)
elif(a == "malha"):
	print((15*d)-1)
elif(a == "placa"):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:09) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
elif(a == "inteira"):
	print((30 * d) - 20)
elif(a == "malha"):
	print((15*d)-1)
elif(a == "placa"):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:40) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
elif(a == "inteira"):
	print((30 * d) - 20)
elif(a == "malha"):
	print((15*d)-1)
elif(a == "placa"):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:49) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
elif(a == "inteira"):
	print((30 * d) - 20)
elif(a == "malha"):
	print((15*d)-1)
elif(a == "placa"):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:13:48) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" or a == "malha" or a == "placa" or d > 1 or d < 8):
	if(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:31) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
elif(a == "inteira"):
	print((30 * d) - 20)
elif(a == "malha"):
	print((15*d)-1)
elif(a == "placa"):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:31) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
elif(a == "inteira"):
	print((30 * d) - 20)
elif(a == "malha"):
	print((15*d)-1)
elif(a == "placa"):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:13) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
elif(a == "inteira"):
	print((30 * d) - 20)
elif(a == "malha"):
	print((15*d)-1)
elif(a == "placa"):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:25) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a != "inteira" or a != "malha" or a != "placa" or d < 1 or d > 8):
	print("Entrada invalida")
elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
	print("PO insuficiente")
elif(a == "inteira"):
	print((30 * d) - 20)
elif(a == "malha"):
	print((15*d)-1)
elif(a == "placa"):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:42) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a != "malha" and a != "placa" and d => 1 and <= 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(a == "inteira" and a != "malha" and a != "placa" and d => 1 and <= 8):
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:49) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a != "malha" and a != "placa" and d >= 1 and <= 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(a == "inteira" and a != "malha" and a != "placa" and d >= 1 and <= 8):
                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:59) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a != "malha" and a != "placa" and d >= 1 and <= 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(a == "inteira" and a != "malha" and a != "placa" and d >= 1 and <= 8):
                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:06) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a != "malha" and a != "placa" and d >= 1 and =< 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(a == "inteira" and a != "malha" and a != "placa" and d >= 1 and =< 8):
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:18:08) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a != "malha" and a != "placa" and d >= 1 and =< 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.16465
-- ERROR:
  File "/home/codebench/codes/1709/3063/main.py", line 5
    if(a == "inteira" and a != "malha" and a != "placa" and d >= 1 and =< 8):
                                                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:16) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a != "malha" and a != "placa" and d >= 1 and <= 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(a == "inteira" and a != "malha" and a != "placa" and d >= 1 and <= 8):
                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:40) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 and <= 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 and <= 8):
                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:52) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 ):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 6
    elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:19:02) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 and <= 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 and <= 8):
                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:19:18) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 OR <= 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 OR <= 8):
                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:19:24) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 or <= 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 or <= 8):
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:52) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").lower
d = int(input("Fator destreza:"))

if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 and <= 8):
	elif(a == "inteira" and o < 200 or a == "malha" and o <50 or a == "placa" and 0 < 100):
		print("PO insuficiente")
	elif(a == "inteira"):
		print((30 * d) - 20)
	elif(a == "malha"):
		print((15*d)-1)
	elif(a == "placa"):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(a == "inteira" and a == "malha" and a == "placa" and d >= 1 and <= 8):
                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:08) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a != "INTEIRA" or a != "MALHA" or a != "PLACA" or d <1 or d>8):
	print("Entrada invalida")
elif(a == "INTEIRA" and o < 200):
	print("PO insuficiente")
elif(a == "MALHA" and o < 50):
	print( "PO insuficiente")
elif(a == "PLACA" and o < 100):
	print( "PO insuficiente")
elif(a == "INTEIRA" and o >= 200):
	print((30*d)-20)
elif(a == "MALHA" and o >= 50):
	print((15*d)-1)
elif(a == "PLACA" and o>= 100):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:39) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a != "INTEIRA" or a != "MALHA" or a != "PLACA" ):
	print("Entrada invalida")
elif(a == "INTEIRA" and o < 200):
	print("PO insuficiente")
elif(a == "MALHA" and o < 50):
	print( "PO insuficiente")
elif(a == "PLACA" and o < 100):
	print( "PO insuficiente")
elif(a == "INTEIRA" and o >= 200):
	print((30*d)-20)
elif(a == "MALHA" and o >= 50):
	print((15*d)-1)
elif(a == "PLACA" and o>= 100):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:23) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a == "INTEIRA" and a == "MALHA" and a == "PLACA" and d >=1 and d<=8):
	elif(a == "INTEIRA" and o < 200):
		print("PO insuficiente")
	elif(a == "MALHA" and o < 50):
		print( "PO insuficiente")
	elif(a == "PLACA" and o < 100):
		print( "PO insuficiente")
	elif(a == "INTEIRA" and o >= 200):
		print((30*d)-20)
	elif(a == "MALHA" and o >= 50):
		print((15*d)-1)
	elif(a == "PLACA" and o>= 100):
		print((20*d)-18)
	else:
		print("Dado invalido")
-- ERROR:
File "XXXX", line 6
    elif(a == "INTEIRA" and o < 200):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:33) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a == "INTEIRA" and a == "MALHA" and a == "PLACA" and d >=1 and d<=8):
	if(a == "INTEIRA" and o < 200):
		print("PO insuficiente")
	elif(a == "MALHA" and o < 50):
		print( "PO insuficiente")
	elif(a == "PLACA" and o < 100):
		print( "PO insuficiente")
	elif(a == "INTEIRA" and o >= 200):
		print((30*d)-20)
	elif(a == "MALHA" and o >= 50):
		print((15*d)-1)
	elif(a == "PLACA" and o>= 100):
		print((20*d)-18)
	else:
		print("Dado invalido")
-- ERROR:
File "XXXX", line 6
    elif(a == "INTEIRA" and o < 200):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:53) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a == "INTEIRA" and a == "MALHA" and a == "PLACA" and d >=1 and d<=8):
	if(a == "INTEIRA" and o < 200):
		print("PO insuficiente")
	elif(a == "MALHA" and o < 50):
		print( "PO insuficiente")
	elif(a == "PLACA" and o < 100):
		print( "PO insuficiente")
	elif(a == "INTEIRA" and o >= 200):
		print((30*d)-20)
	elif(a == "MALHA" and o >= 50):
		print((15*d)-1)
	elif(a == "PLACA" and o>= 100):
		print((20*d)-18)
else:
	print("Dado invalido")
-- OUTPUT:
Dado invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:19) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a == "INTEIRA" or a == "MALHA" or a == "PLACA" or d >=1 and d<=8):
	if(a == "INTEIRA" and o < 200):
		print("PO insuficiente")
	elif(a == "MALHA" and o < 50):
		print( "PO insuficiente")
	elif(a == "PLACA" and o < 100):
		print( "PO insuficiente")
	elif(a == "INTEIRA" and o >= 200):
		print((30*d)-20)
	elif(a == "MALHA" and o >= 50):
		print((15*d)-1)
	elif(a == "PLACA" and o>= 100):
		print((20*d)-18)
else:
	print("Dado invalido")
-- OUTPUT:
Dado invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:20) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a != "INTEIRA" or a != "MALHA" or a != "PLACA" or d <1 or d>8):
	print("Entrada invalida")
elif(a == "INTEIRA" and o < 200):
	print("PO insuficiente")
elif(a == "MALHA" and o < 50):
	print( "PO insuficiente")
elif(a == "PLACA" and o < 100):
	print( "PO insuficiente")
elif(a == "INTEIRA" and o >= 200):
	print((30*d)-20)
elif(a == "MALHA" and o >= 50):
	print((15*d)-1)
elif(a == "PLACA" and o>= 100):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:31) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a != "INTEIRA" or a != "MALHA" or a != "PLACA" or d <1 or d>8):
	print("Entrada invalida")
elif(a == "INTEIRA" and o < 200):
	print("PO insuficiente")
elif(a == "MALHA" and o < 50):
	print( "PO insuficiente")
elif(a == "PLACA" and o < 100):
	print( "PO insuficiente")
elif(a == "INTEIRA" and o >= 200):
	print((30*d)-20)
elif(a == "MALHA" and o >= 50):
	print((15*d)-1)
elif(a == "PLACA" and o>= 100):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:41) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:")
d = int(input("Fator destreza:"))

if(a != "INTEIRA" or a != "MALHA" or a != "PLACA" or d <1 or d>8):
	print("Entrada invalida")
elif(a == "INTEIRA" and o < 200):
	print("PO insuficiente")
elif(a == "MALHA" and o < 50):
	print( "PO insuficiente")
elif(a == "PLACA" and o < 100):
	print( "PO insuficiente")
elif(a == "INTEIRA" and o >= 200):
	print((30*d)-20)
elif(a == "MALHA" and o >= 50):
	print((15*d)-1)
elif(a == "PLACA" and o>= 100):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:10) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a != "INTEIRA" or a != "MALHA" or a != "PLACA" or d <1 or d>8):
	print("Entrada invalida")
elif(a == "INTEIRA" and o < 200):
	print("PO insuficiente")
elif(a == "MALHA" and o < 50):
	print( "PO insuficiente")
elif(a == "PLACA" and o < 100):
	print( "PO insuficiente")
elif(a == "INTEIRA" and o >= 200):
	print((30*d)-20)
elif(a == "MALHA" and o >= 50):
	print((15*d)-1)
elif(a == "PLACA" and o>= 100):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:38:12) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a != "INTEIRA" or a != "MALHA" or a != "PLACA" or d <1 or d>8):
	print("Entrada invalida")
elif(a == "INTEIRA" and o < 200):
	print("PO insuficiente")
elif(a == "MALHA" and o < 50):
	print( "PO insuficiente")
elif(a == "PLACA" and o < 100):
	print( "PO insuficiente")
elif(a == "INTEIRA" and o >= 200):
	print((30*d)-20)
elif(a == "MALHA" and o >= 50):
	print((15*d)-1)
elif(a == "PLACA" and o>= 100):
	print((20*d)-18)
-- EXECUTION TIME:
0.198417
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:13) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a != "INTEIRA" or a != "MALHA" or a != "PLACA" or d <1 or d>8):
	print("Entrada invalida")
elif(a == "INTEIRA" and o < 200):
	print("PO insuficiente")
elif(a == "MALHA" and o < 50):
	print( "PO insuficiente")
elif(a == "PLACA" and o < 100):
	print( "PO insuficiente")
elif(a == "INTEIRA" and o >= 200):
	print((30*d)-20)
elif(a == "MALHA" and o >= 50):
	print((15*d)-1)
elif(a == "PLACA" and o>= 100):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:39:19) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a == "INTEIRA" and a == "MALHA" and a == "PLACA" and d >=1 and d <=8):
	print("Entrada invalida")
elif(a == "INTEIRA" and o < 200):
	print("PO insuficiente")
elif(a == "MALHA" and o < 50):
	print( "PO insuficiente")
elif(a == "PLACA" and o < 100):
	print( "PO insuficiente")
elif(a == "INTEIRA" and o >= 200):
	print((30*d)-20)
elif(a == "MALHA" and o >= 50):
	print((15*d)-1)
elif(a == "PLACA" and o>= 100):
	print((20*d)-18)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:39:48) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a == "INTEIRA" and a == "MALHA" and a == "PLACA" and d >=1 and d <=8):
	if(a == "INTEIRA" and o < 200):
		print("PO insuficiente")
	elif(a == "MALHA" and o < 50):
		print( "PO insuficiente")
	elif(a == "PLACA" and o < 100):
		print( "PO insuficiente")
	elif(a == "INTEIRA" and o >= 200):
		print((30*d)-20)
	elif(a == "MALHA" and o >= 50):
		print((15*d)-1)
	elif(a == "PLACA" and o>= 100):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:00) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a == "INTEIRA" and a == "MALHA" and a == "PLACA" and d >=1 and d <=8):
	if(a == "INTEIRA" and o < 200):
		print("PO insuficiente")
	elif(a == "MALHA" and o < 50):
		print( "PO insuficiente")
	elif(a == "PLACA" and o < 100):
		print( "PO insuficiente")
	elif(a == "INTEIRA" and o >= 200):
		print((30*d)-20)
	elif(a == "MALHA" and o >= 50):
		print((15*d)-1)
	elif(a == "PLACA" and o>= 100):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:40) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = string(input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a == "INTEIRA" and a == "MALHA" and a == "PLACA" and d >=1 and d <=8):
	if(a == "INTEIRA" and o < 200):
		print("PO insuficiente")
	elif(a == "MALHA" and o < 50):
		print( "PO insuficiente")
	elif(a == "PLACA" and o < 100):
		print( "PO insuficiente")
	elif(a == "INTEIRA" and o >= 200):
		print((30*d)-20)
	elif(a == "MALHA" and o >= 50):
		print((15*d)-1)
	elif(a == "PLACA" and o>= 100):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 3
    d = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:54) 
-- CODE:
o = int(input("Quantidade de pecas de ouro:"))
a = input("Nome da armadura:").upper
d = int(input("Fator destreza:"))

if(a == "INTEIRA" and a == "MALHA" and a == "PLACA" and d >=1 and d <=8):
	if(a == "INTEIRA" and o < 200):
		print("PO insuficiente")
	elif(a == "MALHA" and o < 50):
		print( "PO insuficiente")
	elif(a == "PLACA" and o < 100):
		print( "PO insuficiente")
	elif(a == "INTEIRA" and o >= 200):
		print((30*d)-20)
	elif(a == "MALHA" and o >= 50):
		print((15*d)-1)
	elif(a == "PLACA" and o>= 100):
		print((20*d)-18)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:18) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 5
    if(a != "MALHA"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:26) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA")
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 6
    print("Dados invalidos")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:36) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 5
    if(a != "MALHA"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:37) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 5
    if(a != "MALHA"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:37) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 5
    if(a != "MALHA"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:37) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 5
    if(a != "MALHA"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:37) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 5
    if(a != "MALHA"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:37) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 5
    if(a != "MALHA"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:38) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 5
    if(a != "MALHA"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:38) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 5
    if(a != "MALHA"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:38) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:")
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 5
    if(a != "MALHA"):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:43) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:56) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:49:04) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- EXECUTION TIME:
0.184047
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:50:01) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:50:10) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:50:14) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:50:28) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:51:07) 
-- CODE:
po = FLOAT(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- EXECUTION TIME:
0.163292
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3063/main.py", line 1, in <module>
    po = FLOAT(input())
NameError: name 'FLOAT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:51:12) 
-- CODE:
po = float(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- EXECUTION TIME:
0.124268
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:51:16) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:51:18) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- EXECUTION TIME:
0.146373
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:51:19) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- EXECUTION TIME:
0.159779
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:51:19) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- EXECUTION TIME:
0.175499
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:51:19) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- EXECUTION TIME:
0.198883
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:51:19) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Dados invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Dados invalidos")
elif( d < 1):
	print("Dados invalidos")
elif( d > 8):
	print("Dados invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- EXECUTION TIME:
0.434292
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Dados invalidos
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:

-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:05) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Entrada invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Entrada invalidos")
elif( d < 1):
	print("Entrada invalidos")
elif( d > 8):
	print("Entrada invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Entrada invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:14) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Entrada invalidos")
elif( a != "INTEIRA"):
	print("Dados invalidos")
elif(a != "PLACA"):
	print("Entrada invalidos")
elif( d < 1):
	print("Entrada invalidos")
elif( d > 8):
	print("Entrada invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Entrada invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:30) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Entrada invalidos")
elif( a != "INTEIRA"):
	print("Entrada invalidos")
elif(a != "PLACA"):
	print("Entrada invalidos")
elif( d < 1):
	print("Entrada invalidos")
elif( d > 8):
	print("Entrada invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Entrada invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:41) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Entrada invalidos")
elif( a != "INTEIRA"):
	print("Entrada invalidos")
elif(a != "PLACA"):
	print("Entrada invalidos")
elif( d < 1):
	print("Entrada invalidos")
elif( d > 8):
	print("Entrada invalidos")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Entrada invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:54:02) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").upper()
d = int(input("destreza:"))
		  
if(a != "MALHA"):
	print("Entrada invalida")
elif( a != "INTEIRA"):
	print("Entrada invalida")
elif(a != "PLACA"):
	print("Entrada invalida")
elif( d < 1):
	print("Entrada invalida")
elif( d > 8):
	print("Entrada invalida")
elif( a == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (a == "MALHA" and po <50):
	print("PO insuficiente")
elif( a == "PLACA" and po < 100):
	print("PO insuficiente")
elif(a == "PLACA" and po >= 100):
	print(20*d - 18)
elif(a == "MALHA" and po >= 50):
	print(15*d - 1)
elif(a == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- EXECUTION TIME:
0.132846
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:40) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:").
d = int(input("destreza:"))
b = a.upper()	  
if(b != "MALHA"):
	print("Entrada invalida")
elif( b != "INTEIRA"):
	print("Entrada invalida")
elif(b != "PLACA"):
	print("Entrada invalida")
elif( d < 1):
	print("Entrada invalida")
elif( d > 8):
	print("Entrada invalida")
elif( b == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (b == "MALHA" and po <50):
	print("PO insuficiente")
elif( b == "PLACA" and po < 100):
	print("PO insuficiente")
elif(b == "PLACA" and po >= 100):
	print(20*d - 18)
elif(b == "MALHA" and po >= 50):
	print(15*d - 1)
elif(b == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- ERROR:
File "XXXX", line 2
    a = input().
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:46) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:"))
b = a.upper()	  
if(b != "MALHA"):
	print("Entrada invalida")
elif( b != "INTEIRA"):
	print("Entrada invalida")
elif(b != "PLACA"):
	print("Entrada invalida")
elif( d < 1):
	print("Entrada invalida")
elif( d > 8):
	print("Entrada invalida")
elif( b == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (b == "MALHA" and po <50):
	print("PO insuficiente")
elif( b == "PLACA" and po < 100):
	print("PO insuficiente")
elif(b == "PLACA" and po >= 100):
	print(20*d - 18)
elif(b == "MALHA" and po >= 50):
	print(15*d - 1)
elif(b == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:58) 
-- CODE:
po = int(input("QTD OURO:"))
a = input("ARMADURA:")
d = int(input("destreza:"))
b = a.upper()	  
if(b != "MALHA"):
	print("Entrada invalida")
elif( b != "INTEIRA"):
	print("Entrada invalida")
elif(b != "PLACA"):
	print("Entrada invalida")
elif( d < 1):
	print("Entrada invalida")
elif( d > 8):
	print("Entrada invalida")
elif( b == "INTEIRA" and po < 200):
	print("PO insuficiente")
elif (b == "MALHA" and po <50):
	print("PO insuficiente")
elif( b == "PLACA" and po < 100):
	print("PO insuficiente")
elif(b == "PLACA" and po >= 100):
	print(20*d - 18)
elif(b == "MALHA" and po >= 50):
	print(15*d - 1)
elif(b == "INTEIRA" and po>=200):
	print(30*d -20)		  
		  
		  
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
